fix: overflow in blog post and footer

--- a/_includes/postcss/partial/_blog.css
+++ b/_includes/postcss/partial/_blog.css
@@ -1,3 +1,7 @@
+.tmpl-post {
+  overflow: hidden;
+}
+
 .blog {
   line-height: 1.7;
   text-rendering: optimizeLegibility;
