--- a/_includes/postcss/partial/_footer.css
+++ b/_includes/postcss/partial/_footer.css
@@ -48,6 +48,8 @@
 
   & .footer__right ul {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   & .footer__right li {
